--- a/recipe/src/main/resources/templates/index.html
+++ b/recipe/src/main/resources/templates/index.html
@@ -5,13 +5,12 @@
 <title>Recipe Home</title>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
 
-<!-- Optional theme -->
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
+<script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" th:href="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
 <div class="container-fluid" style="margin-top: 20px">
@@ -28,19 +27,23 @@
 								<tr>
 									<th>ID</th>
 									<th>Description</th>
+									<th><a href="#">View</a></th>
 								</tr>
 							</thead>
 							<tr th:remove="all">
 								<td th:text="${recipe.id}">123</td>
 								<td th:text="${recipe.description}">Tasty Goodness 1</td>
+								<td><a href="#">View</a></td>
 							</tr>
 							<tr th:remove="all">
 								<td th:text="${recipe.id}">123</td>
 								<td th:text="${recipe.description}">Tasty Goodness 2</td>
+								<td>View</td>
 							</tr>
 							<tr th:each="recipe:${recipes}">
 								<td th:text="${recipe.id}">123</td>
 								<td th:text="${recipe.description}">Tasty Goodness 3</td>
+								<td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
 							</tr>
 						</table>
 					</div>
