--- a/recipe/src/main/resources/templates/recipe/ingredient/list.html
+++ b/recipe/src/main/resources/templates/recipe/ingredient/list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Recipe Home</title>
+<title>Ingredient List</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
@@ -18,10 +18,10 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h1 class="panel-title">My Recipe</h1>
+					<h1 class="panel-title">Ingredients List</h1>
 				</div>
 				<div class="panel-body">
-					<div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+					<div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
 						<table class="table table-hover">
 							<thead class="thead-inverse">
 								<tr>
@@ -42,12 +42,12 @@
 								<td th:text="${recipe.description}">Tasty Goodness 2</td>
 								<td>View</td>
 							</tr>
-							<tr th:each="recipe:${recipes}">
-								<td th:text="${recipe.id}">123</td>
-								<td th:text="${recipe.description}">Tasty Goodness 3</td>
-								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show/'}">View</a></td>
-								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update/'}">Update</a></td>
-								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/delete/'}">Delete</a></td>
+							<tr th:each="ingredient:${recipe.ingredients}">
+								<td th:text="${ingredient.id}">123</td>
+								<td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' ' + ${ingredient.description}">Tasty Goodness 3</td>
+								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/'}">View</a></td>
+								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/'}">Update</a></td>
+								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/'}">Delete</a></td>
 							</tr>
 						</table>
 					</div>
