--- a/recipe/src/main/resources/templates/recipe/show.html
+++ b/recipe/src/main/resources/templates/recipe/show.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-8 col-md-offset-2">
             <div class="pannel-group">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
@@ -85,7 +85,14 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h1 class="panel-title" >Ingredients</h1>
+                    	<div class="row">
+	                    	<div class="col-md-10">
+	                        	<h1 class="panel-title" >Ingredients</h1>
+	                        </div>
+	                        <div class="col-md-2">
+	                            <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients/'}" role="button">View</a>
+	                        </div>
+                        </div>
                     </div>
                     <div class="panel-body">
                         <div class="row">
