--- a/recipe/src/main/resources/templates/recipe/ingredient/show.html
+++ b/recipe/src/main/resources/templates/recipe/ingredient/show.html
@@ -18,36 +18,29 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h1 class="panel-title">Ingredients List</h1>
+					<h1 class="panel-title">Ingredient</h1>
 				</div>
 				<div class="panel-body">
-					<div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
+					<div class="table-responsive">
 						<table class="table table-hover">
 							<thead class="thead-inverse">
 								<tr>
 									<th>ID</th>
 									<th>Description</th>
-									<th><a href="#">View</a></th>
-									<th><a href="#">Update</a></th>
-									<th><a href="#">Delete</a></th>
 								</tr>
 							</thead>
 							<tr th:remove="all">
-								<td th:text="${recipe.id}">123</td>
-								<td th:text="${recipe.description}">Tasty Goodness 1</td>
-								<td><a href="#">View</a></td>
+								<td th:text="${ingredient.id}">123</td>
+								<td th:text="${ingredient.description}">Tasty Goodness 1</td>
 							</tr>
 							<tr th:remove="all">
-								<td th:text="${recipe.id}">123</td>
-								<td th:text="${recipe.description}">Tasty Goodness 2</td>
-								<td>View</td>
-							</tr>
-							<tr th:each="ingredient:${recipe.ingredients}">
 								<td th:text="${ingredient.id}">123</td>
-								<td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' ' + ${ingredient.description}">Tasty Goodness 3</td>
-								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/show'}">View</a></td>
-								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/update'}">Update</a></td>
-								<td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>
+								<td th:text="${ingredient.description}">Tasty Goodness 2</td>
+							</tr>
+							<tr th:each="i:${ingredient}">
+								<td th:text="${i.id}">123</td>
+								<td th:text="${i.amount} + ' ' + ${i.uom.getDescription()} + ' ' + ${i.description}">Tasty Goodness 3</td>
+								
 							</tr>
 						</table>
 					</div>
